<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LectoRSS</string>
    <string name="menu_settings">Configuración</string>
	<string name="menu_about">Acerca de&#8230;</string>
    <string name="version_value">1.0.0</string>
    
    <!-- splash.xml -->

    <string name="title_activity_splash">LectoRSS</string>
    <string name="splash_logo_description">logo aplicación</string>
    <string name="splash_author">by gothalo</string>
    <string name="splash_version_label">Versión </string>
    
    <!-- fin splash.xml -->


    <!-- about.xml -->

	<string name="about_header">Acerca de&#8230;</string>
    <string name="about_author">Aplicación desarrollada por gothalo.</string>
	<string name="about_version">Versión </string>
	<string name="about_license">Sujeta a una licencia Creative Commons \nReconocimiento-NoComercial-CompartirIgual 3.0 España\n(CC BY-NC-SA 3.0 ES)</string>
   	<string name="title_activity_about">Acerca de &#8230;</string>
		
    <!-- fin about.xml -->
    
    
    <!-- articlelist.xml -->
    
    <string name="title_activiy_articlelist">LectoRSS</string>
    <string name="articlelist_author_label">Por </string>
    <string name="articlelist_date_label">Fecha : </string>
    <string name="article_list_header">Últimos artículos.</string>
    
	<!--  fin articlelist.xml -->


	<!-- articledetail.xml -->
	
	<string name="title_activity_articledetail">LectoRSS</string>
	<string name="articledetail_author_label">Por </string>
    <string name="articledetail_date_label">Fecha : </string>
    
	<!-- fin articledetail.xml -->
	
	<!-- mensajes clase FeedsLoader -->
	
	<string name="feedsloader_error_malformed">La dirección URL del feed no es válida</string>
	<string name="feedsloader_error_io">No se ha podido acceder a la URL del feed</string>
	<string name="feedsloader_error_sax">No se ha podido leer la información almacenada en el feed</string>
	
	<!-- fin mensajes clase FeedsLoader -->
	
</resources>