<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background" >
    
    <TextView
        android:id="@+id/txtHeader"
        android:textColor="@color/default_color"
        android:text="@string/about_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_xlarge"/>

   	<ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splash_logo_description"
        android:src="@drawable/logo_splash" />
        
   	<TextView
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/about_author"
   	    android:textSize="@dimen/text_normal"
   	    android:textColor="@color/default_color" />

</LinearLayout>